# require-gpu

./: pyproject.toml
src/require_gpu/: __init__.py  cli.py
